--- a/conda.yaml
+++ b/conda.yaml
@@ -20,7 +20,7 @@ dependencies:
     - seaborn>=0.11.2
     - hydra-core>=1.3.0
     - pandas>=1.5.3
-    - pyDataverse>=0.3.1
+    - pyDataverse==0.3.1
     - requests>=2.28.1
     - setuptools>=58.0.4
     - networkx>=3.0
