--- a/benchmarks/conf/pipeline.yaml
+++ b/benchmarks/conf/pipeline.yaml
@@ -4,23 +4,28 @@ logdir: benchmarks/results
 # and the config file at benchmarks/run/config.yaml
 concurrency: 10
 mem_mb: 4000
-cpus_per_task: 1
+cpus_per_task: 2
 overwrite: false
 
 spaceenvs:
   cont:
-    - climate_relhum_wfsmoke_cont
-    - healthd_hhinco_mortality_cont
-    - healthd_pollutn_mortality_cont
-    - county_educatn_election_cont
-    - county_phyactiv_lifexpcy_cont
-    - cdcsvi_limteng_hburdic_cont
-    - cdcsvi_nohsdp_poverty_cont
+    # - climate_relhum_wfsmoke_cont
+    # - healthd_hhinco_mortality_cont
+    # - healthd_pollutn_mortality_cont
+    # - county_educatn_election_cont
+    # - county_phyactiv_lifexpcy_cont
+    # - cdcsvi_limteng_hburdic_cont
+    # - cdcsvi_nohsdp_poverty_cont
+    - 
   disc:
-    - county_dmgrcs_election_disc
-    - climate_wfsmoke_minrty_disc
-    - healthd_dmgrcs_mortality_disc
-    - cdcsvi_nohsdp_poverty_disc
+    # - county_dmgrcs_election_disc
+    # - climate_wfsmoke_minrty_disc
+    # - cdcsvi_nohsdp_poverty_disc
+    # - healthdgraph_rad1_pollutn_mortality_disc
+    # - healthdgraph_rad2_pollutn_mortality_disc
+    # - healthdgrid_rad1_pollutn_mortality_disc
+    - healthdgrid_rad2_pollutn_mortality_disc
+
 
 algorithms:
   cont:
