updated deconfounder code to separate

--- a/benchmarks/conf/config.yaml
+++ b/benchmarks/conf/config.yaml
@@ -29,7 +29,7 @@ algo:  # these config must be overwritten by algo/*.yaml
       gpu: ${oc.select:gpu_map.${algo.name},0}
     tune_config:
       _target_: ray.tune.TuneConfig
-      num_samples: 10
+      num_samples: ${oc.select:sample_map.${algo.name},10}
       max_concurrent_trials: ${concurrency}
       scheduler:
         _target_: ray.tune.schedulers.ASHAScheduler
@@ -39,12 +39,34 @@ algo:  # these config must be overwritten by algo/*.yaml
       storage_path: benchmarks/ray_cache/${spaceenv}/${hydra:runtime.choices.algo}
 
 gpu_map:
-  deconfounder_r0: 1
+  deconfounder_r0_unet: 1
+  deconfounder_r1_unet: 1
+  deconfounder_r2_unet: 1
+  deconfounder_r0_spatialplus: 1
+  deconfounder_r1_spatialplus: 1
+  deconfounder_r2_spatialplus: 1
+  deconfounder_r0_s2sls-lag1: 1
+  deconfounder_r1_s2sls-lag1: 1
+  deconfounder_r2_s2sls-lag1: 1
+  
   deconfounder_r1: 1
   deconfounder_r2: 1
   gcn: 1
   spatial: 1
   spatialplus: 1
+
+sample_map:
+  deconfounder_r0_unet: 16
+  deconfounder_r1_unet: 16
+  deconfounder_r2_unet: 16
+  
+  deconfounder_r0_spatialplus: 16
+  deconfounder_r1_spatialplus: 16
+  deconfounder_r2_spatialplus: 16
+  
+  deconfounder_r0_s2sls-lag1: 8
+  deconfounder_r1_s2sls-lag1: 8
+  deconfounder_r2_s2sls-lag1: 8
 
 hydra:
   run:
