--- a/benchmarks/conf/algo/deconfounder_r1_unet.yaml
+++ b/benchmarks/conf/algo/deconfounder_r1_unet.yaml
@@ -4,33 +4,34 @@ use_interference: true
 method:
   _target_: sci.algorithms.Deconfounder
   kernel_size: 3
-  radius: 0
+  radius: 1
   connectivity: 8
   encoder_pool: max
-  bilinear: false
-  lr: 3e-4
-  beta_epoch_max: 10
-  epochs: 30
+  lr_cvae: 1e-3
+  beta_epoch_max: 5
+  epochs_cvae: 50
   encoder_conv1: 64
-  encoder_conv2: 8
+  encoder_conv2: 64
+  batch_size: 64
+  # unet kwargs
+  head: unet
+  epochs_head: 50
+  lr_head: 1e-3
+  bilinear: false
 
 
 tune:
   param_space:
-    latent_dim:
-      _target_: ray.tune.choice
-      _args_: 
-        - [8, 16, 32]
-    weight_decay:
+    weight_decay_cvae:
       _target_: ray.tune.loguniform
-      _args_: [1e-4, 1e-2]
+      _args_: [1e-4, 1e-3]
+    weight_decay_head:
+      _target_: ray.tune.loguniform
+      _args_: [1e-4, 1e-3]
     beta_max:
       _target_: ray.tune.loguniform
-      _args_: [1e-2, 2e-1]
-    gamma:
-      _target_: ray.tune.loguniform
-      _args_: [1e-3, 1e-1]
+      _args_: [1e-2, 1]
     unet_base_chan:
       _target_: ray.tune.choice
       _args_:
-        - [16, 32]
+        - [16, 32, 64]
