--- a/benchmarks/conf/pipeline.yaml
+++ b/benchmarks/conf/pipeline.yaml
@@ -10,17 +10,18 @@ overwrite: false
 spaceenvs:
   cont:
     - 
-  disc:
-    # - healthdgraph_rad1_pollutn_mortality_disc
-    # - healthdgraph_rad2_pollutn_mortality_disc
+  disc:    
+    - nonlocal_small_healthdgrid_rad1_pollutn_mortality_disc
+    - nonlocal_small_healthdgrid_rad2_pollutn_mortality_disc
+        
+    - small_healthdgrid_rad1_pollutn_mortality_disc
+    - small_healthdgrid_rad2_pollutn_mortality_disc
     
-    # - small_healthdgrid_rad1_pollutn_mortality_disc
-    
-    # - healthdgrid_rad1_pollutn_mortality_disc
-    # - healthdgrid_rad2_pollutn_mortality_disc
+    - nonlocal_pm25grid_rad1_so4_pm_disc
+    - nonlocal_pm25grid_rad2_so4_pm_disc
     
     - pm25grid_rad1_so4_pm_disc
-    # - pm25grid_rad2_so4_pm_disc
+    - pm25grid_rad2_so4_pm_disc
 
 
 algorithms:
@@ -40,7 +41,9 @@ algorithms:
     # - spatialplus
     # - gcn
     # - s2sls-lag1
-    - deconfounder_r0
-    # - deconfounder_r1
-    # - deconfounder_r2
+    # - deconfounder_r1_unet
+    - deconfounder_r0_spatialplus
+    # - deconfounder_r1_spatialplus
+    # - deconfounder_r2_spatialplus
+    # - deconfounder_r2_s2sls-lag1
 
