Updated cvae code

--- a/benchmarks/conf/algo/deconfounder_r2_spatialplus_16.yaml
+++ b/benchmarks/conf/algo/deconfounder_r2_spatialplus_16.yaml
@@ -2,7 +2,7 @@ needs_train_test_split: false
 use_interference: true
 
 method:
-  _target_: sci.algorithms.prev_deconfounder.Deconfounder
+  _target_: sci.algorithms.Deconfounder
   kernel_size: 3
   radius: 2
   connectivity: 8
@@ -11,11 +11,15 @@ method:
   beta_epoch_max: 5
   epochs_cvae: 50
   encoder_conv1: 64
-  encoder_conv2: 64
-  batch_size: 64
+  encoder_conv2: 16
   # spatialplus kwargs
-  head: s2sls-lag1
-  w_lags: 0
+  head: spatialplus
+  max_iter: 2_500
+  spatial_split_kwargs:
+    init_frac: 0.02
+    levels: 1
+    # seed: 0
+  k: 100
 
 
 tune:
@@ -25,4 +29,11 @@ tune:
       _args_: [1e-4, 1e-3]
     beta_max:
       _target_: ray.tune.loguniform
-      _args_: [1e-2, 1]
+      _args_: [1e-5, 10]
+        
+    lam_t:
+      _target_: ray.tune.loguniform
+      _args_: [1e-5, 1.0]
+    lam_y:
+      _target_: ray.tune.loguniform
+      _args_: [1e-5, 1.0]
