--- a/benchmarks/conf/config.yaml
+++ b/benchmarks/conf/config.yaml
@@ -26,10 +26,10 @@ algo:  # these config must be overwritten by algo/*.yaml
     param_space: {}
     resources:
       cpu: 4
-      gpu: ${oc.select:gpu_map.${algo.name},0}
+      gpu: ${oc.select:gpu_map.${algo.name},1}
     tune_config:
       _target_: ray.tune.TuneConfig
-      num_samples: ${oc.select:sample_map.${algo.name},10}
+      num_samples: 16
       max_concurrent_trials: ${concurrency}
       scheduler:
         _target_: ray.tune.schedulers.ASHAScheduler
@@ -42,31 +42,22 @@ gpu_map:
   deconfounder_r0_unet: 1
   deconfounder_r1_unet: 1
   deconfounder_r2_unet: 1
-  deconfounder_r0_spatialplus: 1
-  deconfounder_r1_spatialplus: 1
-  deconfounder_r2_spatialplus: 1
+  
+  deconfounder_r0_spatialplus_8: 1
+  deconfounder_r1_spatialplus_8: 1
+  deconfounder_r2_spatialplus_8: 1
+  
+  deconfounder_r0_spatialplus_64: 1
+  deconfounder_r1_spatialplus_64: 1
+  deconfounder_r2_spatialplus_64: 1
+  
   deconfounder_r0_s2sls-lag1: 1
   deconfounder_r1_s2sls-lag1: 1
   deconfounder_r2_s2sls-lag1: 1
-  
-  deconfounder_r1: 1
-  deconfounder_r2: 1
   gcn: 1
   spatial: 1
   spatialplus: 1
 
-sample_map:
-  deconfounder_r0_unet: 16
-  deconfounder_r1_unet: 16
-  deconfounder_r2_unet: 16
-  
-  deconfounder_r0_spatialplus: 16
-  deconfounder_r1_spatialplus: 16
-  deconfounder_r2_spatialplus: 16
-  
-  deconfounder_r0_s2sls-lag1: 8
-  deconfounder_r1_s2sls-lag1: 8
-  deconfounder_r2_s2sls-lag1: 8
 
 hydra:
   run:
