Updated method and added tuning script

--- a/benchmarks/conf/algo/deconfounder_r3_spatialplus_tune.yaml
+++ b/benchmarks/conf/algo/deconfounder_r3_spatialplus_tune.yaml
@@ -4,14 +4,12 @@ use_interference: true
 method:
   _target_: sci.algorithms.Deconfounder
   kernel_size: 3
-  radius: 1
+  radius: 3
   connectivity: 8
   encoder_pool: max
-  lr_cvae: 1e-3
   beta_epoch_max: 5
   epochs_cvae: 50
   encoder_conv1: 64
-  encoder_conv2: 64
   # spatialplus kwargs
   head: spatialplus
   max_iter: 2_500
@@ -24,12 +22,20 @@ method:
 
 tune:
   param_space:
+    encoder_conv2:
+      _target_: ray.tune.choice
+      _args_:
+        - [2, 4, 8, 16, 32, 64]
+    lr_cvae:
+      _target_: ray.tune.loguniform
+      _args_: [1e-4, 1e-2]
+
     weight_decay_cvae:
       _target_: ray.tune.loguniform
-      _args_: [1e-4, 1e-3]
+      _args_: [1e-7, 1e-3]
     beta_max:
       _target_: ray.tune.loguniform
-      _args_: [1e-5, 1e-4]
+      _args_: [1e-8, 1]
         
     lam_t:
       _target_: ray.tune.loguniform
