--- a/benchmarks/conf/config.yaml
+++ b/benchmarks/conf/config.yaml
@@ -14,7 +14,7 @@ spatial_train_test_split:
 
 spaceenv: climate_wfsmoke_minrty_disc  # must be a valid spaceenv
 logfile: benchmarks/results/${spaceenv}/${hydra:runtime.choices.algo}.jsonl
-tunefile: benchmarks/results/${spaceenv}_${hydra:runtime.choices.algo}_tune.parquet
+tunefile: benchmarks/results/${spaceenv}/${hydra:runtime.choices.algo}_tune.parquet
 
 algo:  # these config must be overwritten by algo/*.yaml
   needs_train_test_split: ???
