--- a/benchmarks/conf/pipeline_tune.yaml
+++ b/benchmarks/conf/pipeline_tune.yaml
@@ -1,4 +1,4 @@
-logdir: benchmarks/results
+logdir: /global/cfs/cdirs/m4888/CI_HPO
 
 # make sure it is also compatible with the cluster.yaml
 # and the config file at benchmarks/run/config.yaml
@@ -11,17 +11,17 @@ spaceenvs:
   cont:
     - 
   disc:    
-    # - nonlocal_small_healthdgrid_rad1_pollutn_mortality_disc
-    # - nonlocal_small_healthdgrid_rad2_pollutn_mortality_disc
+    - nonlocal_small_healthdgrid_rad1_pollutn_mortality_disc
+    - nonlocal_small_healthdgrid_rad2_pollutn_mortality_disc
         
-      - small_healthdgrid_rad1_pollutn_mortality_disc
-      - small_healthdgrid_rad2_pollutn_mortality_disc
+    # - small_healthdgrid_rad1_pollutn_mortality_disc
+    # - small_healthdgrid_rad2_pollutn_mortality_disc
     
     # - nonlocal_pm25grid_rad1_so4_pm_disc
     # - nonlocal_pm25grid_rad2_so4_pm_disc
     
-      - pm25grid_rad1_so4_pm_disc
-      - pm25grid_rad2_so4_pm_disc
+    # - pm25grid_rad1_so4_pm_disc
+    # - pm25grid_rad2_so4_pm_disc
 
 
 algorithms:
@@ -37,12 +37,12 @@ algorithms:
     # - deconfounder
   disc:
     # spatialplus hyperparam tune
-    - deconfounder_r0_spatialplus_tune
-    - deconfounder_r1_spatialplus_tune
-    - deconfounder_r2_spatialplus_tune
-    - deconfounder_r3_spatialplus_tune
+    # - deconfounder_r0_spatialplus_tune
+    # - deconfounder_r1_spatialplus_tune
+    # - deconfounder_r2_spatialplus_tune
+    # - deconfounder_r3_spatialplus_tune
     # unet hyperparam tune
     - deconfounder_r0_unet_tune
-    - deconfounder_r1_unet_tune
-    - deconfounder_r2_unet_tune
-    - deconfounder_r3_unet_tune
+    # - deconfounder_r1_unet_tune
+    # - deconfounder_r2_unet_tune
+    # - deconfounder_r3_unet_tune
