--- a/benchmarks/conf/pipeline_tune.yaml
+++ b/benchmarks/conf/pipeline_tune.yaml
@@ -1,4 +1,4 @@
-logdir: /global/cfs/cdirs/m4888/CI_HPO
+logdir: /pscratch/sd/a/$USER/CI_HPO/results
 
 # make sure it is also compatible with the cluster.yaml
 # and the config file at benchmarks/run/config.yaml
@@ -17,8 +17,8 @@ spaceenvs:
     # - small_healthdgrid_rad1_pollutn_mortality_disc
     # - small_healthdgrid_rad2_pollutn_mortality_disc
     
-    # - nonlocal_pm25grid_rad1_so4_pm_disc
-    # - nonlocal_pm25grid_rad2_so4_pm_disc
+    - nonlocal_pm25grid_rad1_so4_pm_disc
+    - nonlocal_pm25grid_rad2_so4_pm_disc
     
     # - pm25grid_rad1_so4_pm_disc
     # - pm25grid_rad2_so4_pm_disc
@@ -43,6 +43,6 @@ algorithms:
     # - deconfounder_r3_spatialplus_tune
     # unet hyperparam tune
     - deconfounder_r0_unet_tune
-    # - deconfounder_r1_unet_tune
-    # - deconfounder_r2_unet_tune
-    # - deconfounder_r3_unet_tune
+    - deconfounder_r1_unet_tune
+    - deconfounder_r2_unet_tune
+    - deconfounder_r3_unet_tune
