--- a/benchmarks/conf/pipeline.yaml
+++ b/benchmarks/conf/pipeline.yaml
@@ -13,16 +13,21 @@ spaceenvs:
   disc:    
     # - nonlocal_small_healthdgrid_rad1_pollutn_mortality_disc
     # - nonlocal_small_healthdgrid_rad2_pollutn_mortality_disc
-        
-      - small_healthdgrid_rad1_pollutn_mortality_disc
-      - small_healthdgrid_rad2_pollutn_mortality_disc
+    
+    - small_healthdgrid_rad1_pollutn_mortality_disc
+    - small_healthdgrid_rad2_pollutn_mortality_disc
     
     # - nonlocal_pm25grid_rad1_so4_pm_disc
     # - nonlocal_pm25grid_rad2_so4_pm_disc
     
-      - pm25grid_rad1_so4_pm_disc
-      - pm25grid_rad2_so4_pm_disc
-
+    # - pm25grid_rad1_so4_pm_disc
+    # - pm25grid_rad2_so4_pm_disc
+      
+    # - pm25grid_rad1_so4_pm_disc_sparse_10
+    # - pm25grid_rad1_so4_pm_disc_sparse_30
+      
+    # - small_healthdgrid_rad1_pollutn_mortality_disc_singlecause_10
+    # - small_healthdgrid_rad1_pollutn_mortality_disc_singlecause_30
 
 algorithms:
   cont:
@@ -37,24 +42,27 @@ algorithms:
     # - deconfounder
   disc:
     # - dapsm
-    # - spatialplus
+    # - spatial
     # - spatialplus
     # - gcn
     # - s2sls-lag1
     # - unet
     
-    # - deconfounder_r1_spatialplus_2
-    # - deconfounder_r1_spatialplus_4
-    # - deconfounder_r1_spatialplus_8
-    # - deconfounder_r1_spatialplus_16
-    # - deconfounder_r1_spatialplus_32
-    # - deconfounder_r1_spatialplus_64
-
+    # change r1 to "r0" or "r2" to change model radius
+    # the last number in the name denotes the size of the latent dimension divided by 2
+    # i.e. 64 --> d_z = 32
     
-    # - deconfounder_r0_unet_64
-    # - deconfounder_r0_unet_32
-    # - deconfounder_r0_unet_16
-    # - deconfounder_r0_unet_8
-    # - deconfounder_r0_unet_4
-    # - deconfounder_r0_unet_2
+    # - deconfounder_r1_spatialplus_64
+    # - deconfounder_r1_spatialplus_32
+    # - deconfounder_r1_spatialplus_16
+    # - deconfounder_r1_spatialplus_8
+    - deconfounder_r1_spatialplus_4
+    - deconfounder_r1_spatialplus_2
+    
+    # - deconfounder_r1_unet_64
+    # - deconfounder_r1_unet_32
+    # - deconfounder_r1_unet_16
+    # - deconfounder_r1_unet_8
+    # - deconfounder_r1_unet_4
+    # - deconfounder_r1_unet_2
 
